@@ -10,6 +10,8 @@ from Detector.GlobalUtils import print_ndarr, divide_protected
 #from Detector.PyDetector import PyDetector
 #from ImgAlgos.PyAlgos import reshape_nda_to_2d, reshape_nda_to_3d, print_arr_attr, print_arr
 
+#t0_sec = time()
+
 #------------------------------
 
 def plot_det_image(det, evt, nda, tit='') :
@@ -26,18 +28,19 @@ def plot_det_image(det, evt, nda, tit='') :
 
 #------------------------------
 
-def evaluate_rms_limits(arr_rms, verbos=1, nneg=5, npos=6, lowmin=0.01) :
-    """Returns evaluated low and high limit of the RMS, which are used to find rms-cold and rms-hot pixels.
+def evaluate_limits(arr, nneg=5, npos=5, lim_lo=1, lim_hi=1000, verbos=1, cmt='') :
+    """Evaluates low and high limit of the array, which are used to find bad pixels.
     """
-    #t0_sec = time()
-    ave, std = arr_rms.mean(), arr_rms.std()
-    rms_lo, rms_hi = ave-nneg*std, ave+npos*std
-    if rms_lo <= 0 : rms_lo = lowmin*ave
-    if verbos & 1 :
-        print '  %s: RMS ave, std = %.3f, %.3f  low, high limits = %.3f, %.3f'%\
-              (sys._getframe().f_code.co_name, ave, std, rms_lo, rms_hi)
+    ave, std = (arr.mean(), arr.std()) if (nneg>0 or npos>0) else (None,None)
+    lo = ave-nneg*std if nneg>0 else lim_lo
+    hi = ave+npos*std if npos>0 else lim_hi
+    lo, hi = max(lo, lim_lo), min(hi, lim_hi)
 
-    return rms_lo, rms_hi
+    if verbos & 1 :
+        print '  %s: %s ave, std = %.3f, %.3f  low, high limits = %.3f, %.3f'%\
+              (sys._getframe().f_code.co_name, cmt, ave, std, lo, hi)
+
+    return lo, hi
 
 #------------------------------
 
@@ -84,7 +87,7 @@ def fname_template(evt, env, src, ofname, nevts):
 class DetNDArrRawProc :
 
     def __init__(self, dsname, source, ofname, events, evskip, intlow, inthig, rmslow, rmshig, fraclm, nsigma,\
-                 plotim, verbos, savebw, nsiglo, nsighi, flomin):
+                 plotim, verbos, savebw, intnlo, intnhi, rmsnlo, rmsnhi):
 
         self.dsname = dsname
         self.src    = source
@@ -102,9 +105,12 @@ class DetNDArrRawProc :
         self.verbos = verbos
         self.savebw = savebw
 
-        self.nsiglo = nsiglo
-        self.nsighi = nsighi
-        self.flomin = flomin
+        self.intnlo = intnlo
+        self.intnhi = intnhi
+        self.rmsnlo = rmsnlo
+        self.rmsnhi = rmsnhi
+
+        #self.flomin = flomin
 
         self.evstg1 = max(self.events*0.05, 5)
         self.nsigma = nsigma
@@ -131,15 +137,16 @@ class DetNDArrRawProc :
         print 'control bit-word to plot images : %d'   % self.plotim
         print 'control bit-word for verbosity  : %d'   % self.verbos
         print 'control bit-word to save arrays : %d'   % self.savebw
-        print 'intensity low limit (ADU)       : %d'   % self.int_lo
-        print 'intensity high limit (ADU)      : %d'   % self.int_hi
-        print 'rms low limit (ADU)             : ',      self.rms_lo
-        print 'rms high limit (ADU)            : ',      self.rms_hi
+        print 'INTENSITY low limit (ADU)       : ',      self.int_lo
+        print 'INTENSITY high limit (ADU)      : ',      self.int_hi
+        print 'RMS low limit (ADU)             : ',      self.rms_lo
+        print 'RMS high limit (ADU)            : ',      self.rms_hi
         print 'allowed low/high fraction limit : %.3f' % self.fraclm
-        print '\nParameters for auto-evaluation of rms limits:'
-        print 'number of sigma from mean for rms low limit    : ',  self.nsiglo
-        print 'number of sigma from mean for rms high limit   : ',  self.nsighi
-        print 'minimal low limit on rms as a fraction of mean : ',  self.flomin
+        print '\nParameters for auto-evaluation of limits:'
+        print 'number of sigma from mean for INTENSITY low limit  : ',  self.intnlo
+        print 'number of sigma from mean for INTENSITY high limit : ',  self.intnhi
+        print 'number of sigma from mean for RMS low limit        : ',  self.rmsnlo
+        print 'number of sigma from mean for RMS high limit       : ',  self.rmsnhi
         print 50*'_', '\n'
 
 
@@ -203,8 +210,8 @@ class DetNDArrRawProc :
         self.arr_sum1   = np.zeros(self.shape, dtype=np.double)
         self.arr_sum2   = np.zeros(self.shape, dtype=np.double)
 
-        self.gate_lo    = np.ones (self.shape, dtype=ndaraw.dtype) * self.int_lo
-        self.gate_hi    = np.ones (self.shape, dtype=ndaraw.dtype) * self.int_hi
+        self.gate_lo    = self.arr1 * self.int_lo
+        self.gate_hi    = self.arr1 * self.int_hi
 
         if self.savebw & 16 : self.arr_max = np.zeros(self.shape, dtype=ndaraw.dtype)
         if self.savebw & 32 : self.arr_min = np.ones (self.shape, dtype=ndaraw.dtype) * 0xffff
@@ -288,6 +295,7 @@ class DetNDArrRawProc :
             print '%s\nRaw data for %s found in %d events, begin data summary stage' % (80*'_', self.src, self.counter)
         t0_sec = time()
 
+        # make shorter references
         det     = self.det
         ofname  = self.ofname
         plotim  = self.plotim
@@ -306,26 +314,36 @@ class DetNDArrRawProc :
 
         arr_rms = np.sqrt(arr_av2 - np.square(arr_av1))
         
-        rms_lo, rms_hi = evaluate_rms_limits(arr_rms, self.verbos, self.nsiglo, self.nsighi, self.flomin)\
-                         if self.rms_lo is None or self.rms_hi is None or self.rms_hi == 0.\
-                         else (self.rms_lo, self.rms_hi)
+        rms_min, rms_max = evaluate_limits(arr_rms, self.rmsnlo, self.rmsnhi, self.rms_lo, self.rms_hi, self.verbos, cmt='RMS')
+                           #if self.rms_lo is None or self.rms_hi is None or self.rms_hi == 0.\
+                           #else (self.rms_lo, self.rms_hi)
+        #if rms_min<0 : rms_min=0
 
-        arr_sta_rms_hi = np.select((arr_rms>rms_hi,),     (self.arr1,), 0)
-        arr_sta_rms_lo = np.select((arr_rms<rms_lo,),     (self.arr1,), 0)
+        ave_min, ave_max = evaluate_limits(arr_av1, self.intnlo, self.intnhi, self.int_lo, self.int_hi, self.verbos, cmt='AVE')\
+
+        arr_sta_rms_hi = np.select((arr_rms>rms_max,),    (self.arr1,), 0)
+        arr_sta_rms_lo = np.select((arr_rms<rms_min,),    (self.arr1,), 0)
         arr_sta_int_hi = np.select((frac_int_hi>fraclm,), (self.arr1,), 0)
         arr_sta_int_lo = np.select((frac_int_lo>fraclm,), (self.arr1,), 0)
+        arr_sta_ave_hi = np.select((arr_av1>ave_max,),    (self.arr1,), 0)
+        arr_sta_ave_lo = np.select((arr_av1<ave_min,),    (self.arr1,), 0)
 
         print '  Bad pixel status:'  
-        print '  status 1: %8d pixel have rms  > %.3f' % (arr_sta_rms_hi.sum(), rms_hi) 
-        print '  status 2: %8d pixel intensity > %d'   % (arr_sta_int_hi.sum(), int_hi) 
-        print '  status 4: %8d pixel intensity < %d'   % (arr_sta_int_lo.sum(), int_lo) 
-        print '  status 8: %8d pixel have rms  < %.3f' % (arr_sta_rms_lo.sum(), rms_lo) 
+        print '  status  1: %8d pixel rms       > %.3f' % (arr_sta_rms_hi.sum(), rms_max) 
+        print '  status  8: %8d pixel rms       < %.3f' % (arr_sta_rms_lo.sum(), rms_min) 
+        print '  status  2: %8d pixel intensity > %g in more than %g fraction of events' % (arr_sta_int_hi.sum(), int_hi, fraclm) 
+        print '  status  4: %8d pixel intensity < %g in more than %g fraction of events' % (arr_sta_int_lo.sum(), int_lo, fraclm)
+        print '  status 16: %8d pixel average   > %g'   % (arr_sta_ave_hi.sum(), ave_max) 
+        print '  status 32: %8d pixel average   < %g'   % (arr_sta_ave_lo.sum(), ave_min)
 
-        #0/1/2/4/8 for good/hot-rms/saturated/cold/cold-rms, 
-        arr_sta  = arr_sta_rms_hi   # hot rms
-        arr_sta += arr_sta_rms_lo*8 # cold rms
-        arr_sta += arr_sta_int_hi*2 # satturated
-        arr_sta += arr_sta_int_lo*4 # cold
+        #0/1/2/4/8/16/32 for good/hot-rms/saturated/cold/cold-rms/average above limit/average below limit, 
+        arr_sta = np.zeros(self.shape, dtype=np.uint16)
+        arr_sta += arr_sta_rms_hi    # hot rms
+        arr_sta += arr_sta_rms_lo*8  # cold rms
+        arr_sta += arr_sta_int_hi*2  # satturated
+        arr_sta += arr_sta_int_lo*4  # cold
+        arr_sta += arr_sta_ave_hi*16 # too large average
+        arr_sta += arr_sta_ave_lo*32 # too small average
         
         arr_msk  = np.select((arr_sta>0,), (self.arr0,), 1)
 
@@ -361,7 +379,7 @@ class DetNDArrRawProc :
 #------------------------------
 
 def det_ndarr_raw_proc(dsname, sources, ofname, events, evskip, intlow, inthig, rmslow, rmshig, fraclm, nsigma,\
-                       plotim, verbos, savebw, nsiglo, nsighi, flomin):
+                       plotim, verbos, savebw, intnlo, intnhi, rmsnlo, rmsnhi):
 
     t0_sec = time()
     tdt = t0_sec
@@ -374,7 +392,7 @@ def det_ndarr_raw_proc(dsname, sources, ofname, events, evskip, intlow, inthig, 
     
     if verbos & 1 : print 'Raw data processing of dataset: %s' % (dsname)
 
-    lst_dpo = [DetNDArrRawProc(dsname, src, ofname, events, evskip, intlow, inthig, rmslow, rmshig, fraclm, nsigma, plotim, verbos, savebw, nsiglo, nsighi, flomin)\
+    lst_dpo = [DetNDArrRawProc(dsname, src, ofname, events, evskip, intlow, inthig, rmslow, rmshig, fraclm, nsigma, plotim, verbos, savebw, intnlo, intnhi, rmsnlo, rmsnhi)\
                for src in sources.split(',')]
 
     ds  = psana.DataSource(dsname)
@@ -419,18 +437,19 @@ def command_line_parser() :
     ofname_def = 'nda-#exp-#run-#src-#evts-#type-#date-#time-#fid-#sec-#nsec.txt'
     events_def = 10000000
     evskip_def = 0
-    intlow_def = None
-    inthig_def = None
-    rmslow_def = None
-    rmshig_def = None
+    intlow_def = 0
+    inthig_def = 16000
+    rmslow_def = 0
+    rmshig_def = 16000
     fraclm_def = 0.1
     nsigma_def = 6.0
     plotim_def = 0      
     verbos_def = 7
     savebw_def = 0377
-    nsiglo_def = 5.0
-    nsighi_def = 6.0
-    flomin_def = 0.01
+    intnlo_def = 6.0
+    intnhi_def = 6.0
+    rmsnlo_def = 6.0
+    rmsnhi_def = 6.0
 
     h_dsname='dataset name, default = %s' % dsname_def
     h_source='input ndarray source name, default = %s' % source_def
@@ -446,9 +465,10 @@ def command_line_parser() :
     h_plotim='control bit-word to plot images, default = %s' % plotim_def
     h_verbos='control bit-word for verbosity, default = %s' % verbos_def
     h_savebw='control bit-word to save arrays, default = %s' % savebw_def
-    h_nsiglo='number of sigma from mean for low limit on rms, default = %s' % nsiglo_def
-    h_nsighi='number of sigma from mean for high limit on rms, default = %s' % nsighi_def
-    h_flomin='minimal low limit on rms as a fraction of mean, default = %s' % flomin_def
+    h_intnlo='number of sigma from mean for low  limit on INTENSITY, default = %s' % intnlo_def
+    h_intnhi='number of sigma from mean for high limit on INTENSITY, default = %s' % intnhi_def
+    h_rmsnlo='number of sigma from mean for low  limit on RMS, default = %s' % rmsnlo_def
+    h_rmsnhi='number of sigma from mean for high limit on RMS, default = %s' % rmsnhi_def
 
     parser = OptionParser(description=usage(1), usage ='usage: %prog [options]\n' + usage())
     parser.add_option('-d', '--dsname', dest='dsname', default=dsname_def, action='store', type='string', help=h_dsname)
@@ -456,8 +476,8 @@ def command_line_parser() :
     parser.add_option('-f', '--ofname', dest='ofname', default=ofname_def, action='store', type='string', help=h_ofname)
     parser.add_option('-n', '--events', dest='events', default=events_def, action='store', type='int',    help=h_events)
     parser.add_option('-m', '--evskip', dest='evskip', default=evskip_def, action='store', type='int',    help=h_evskip)
-    parser.add_option('-b', '--intlow', dest='intlow', default=intlow_def, action='store', type='int',    help=h_intlow)
-    parser.add_option('-t', '--inthig', dest='inthig', default=inthig_def, action='store', type='int',    help=h_inthig)
+    parser.add_option('-b', '--intlow', dest='intlow', default=intlow_def, action='store', type='float',  help=h_intlow)
+    parser.add_option('-t', '--inthig', dest='inthig', default=inthig_def, action='store', type='float',  help=h_inthig)
     parser.add_option('-B', '--rmslow', dest='rmslow', default=rmslow_def, action='store', type='float',  help=h_rmslow)
     parser.add_option('-T', '--rmshig', dest='rmshig', default=rmshig_def, action='store', type='float',  help=h_rmshig)
     parser.add_option('-F', '--fraclm', dest='fraclm', default=fraclm_def, action='store', type='float',  help=h_fraclm)
@@ -465,9 +485,11 @@ def command_line_parser() :
     parser.add_option('-p', '--plotim', dest='plotim', default=plotim_def, action='store', type='int',    help=h_plotim)
     parser.add_option('-v', '--verbos', dest='verbos', default=verbos_def, action='store', type='int',    help=h_verbos)
     parser.add_option('-S', '--savebw', dest='savebw', default=savebw_def, action='store', type='int',    help=h_savebw)
-    parser.add_option('-L', '--nsiglo', dest='nsiglo', default=nsiglo_def, action='store', type='float',  help=h_nsiglo)
-    parser.add_option('-H', '--nsighi', dest='nsighi', default=nsighi_def, action='store', type='float',  help=h_nsighi)
-    parser.add_option('-M', '--flomin', dest='flomin', default=flomin_def, action='store', type='float',  help=h_flomin)
+    parser.add_option('-D', '--intnlo', dest='intnlo', default=intnlo_def, action='store', type='float',  help=h_intnlo)
+    parser.add_option('-U', '--intnhi', dest='intnhi', default=intnhi_def, action='store', type='float',  help=h_intnhi)
+    parser.add_option('-L', '--rmsnlo', dest='rmsnlo', default=rmsnlo_def, action='store', type='float',  help=h_rmsnlo)
+    parser.add_option('-H', '--rmsnhi', dest='rmsnhi', default=rmsnhi_def, action='store', type='float',  help=h_rmsnhi)
+
     #parser.add_option('-p', '--plotim', dest='plotim', default=plotim_def, action='store_true',         help=h_plotim)
  
     opts, args = parser.parse_args()
@@ -495,7 +517,7 @@ if __name__ == "__main__" :
 
     det_ndarr_raw_proc(opts.dsname, opts.source, opts.ofname, opts.events, opts.evskip, 
                        opts.intlow, opts.inthig, opts.rmslow, opts.rmshig, opts.fraclm, opts.nsigma, 
-                       opts.plotim, opts.verbos, opts.savebw, opts.nsiglo, opts.nsighi, opts.flomin)
+                       opts.plotim, opts.verbos, opts.savebw, opts.intnlo, opts.intnhi, opts.rmsnlo, opts.rmsnhi)
 
     sys.exit(0)
 
